# grid_frequency_analysis

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/: run.py
src/grid_frequency_analysis/: __init__.py  concat_resample.py  count_min_outside_nominal.py  create_weekly_csv.py  download_fingrid_data.py  extract_fingrid_data.py  plot_minutes_per_year.py
