[project]
name = "grid-frequency-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Truls", email = "github.elude602@passmail.net" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
grid-frequency-analysis = "grid_frequency_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
