[project]
name = "grid-frequency-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Truls", email = "github.elude602@passmail.net" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "py7zr>=0.22.0",
]
